# Boss-Integrated-Scheduler

./: .gitignore  README.md
.github/workflows/: playwright.yml
API/: go.mod  go.sum  main.go
API/handlers/: homeHandler.go
API/repositories/repo_interface/: interface.go
API/routes/: routes.go
App/: package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs
App/.github/workflows/: playwright.yml
App/.svelte-kit/: ambient.d.ts
App/.svelte-kit/types/: route_meta_data.json
App/src/: app.css  hooks.server.ts
App/src/lib/: trpc.ts
App/src/lib/components/: Calendar.svelte  Card.svelte  Hero.svelte  Nav.svelte
App/src/lib/models/: Calendar.ts  quarters.ts
App/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
App/tests/: calendar.spec.ts  navigation.spec.ts  quarter.spec.ts
PublicApi/public_api/: Cargo.toml
PublicApi/public_api/src/: main.rs  v1.rs
WebScraper/: classes.py  dataCleaner.py  database.py  main.py  models.py  output.json  outputCleaned.json  requirements.txt  scrapeFunctions.py  seleniumNavigator.py  test.json  testScraper.py  tutorial.py
api/: package-lock.json  package.json
api/prisma/: schema.prisma
api/src/: env.ts  index.ts  trpc.ts
api/src/auth/: auth.service.ts
api/src/models/: courses.ts  quarters.ts  sections.ts  subjects.ts
api/src/routers/: courses.ts  getSectionByCallNumber.ts  quarters.ts  root.ts  sections.ts  subjects.ts
apiold/: package.json
apiold/prisma/: schema.prisma
apiold/src/: app.module.ts
apiold/src/auth/: auth.controller.ts
apiold/src/prisma/: prisma.service.ts
(+19 files in other folders)
